Post.module.css - Fix home button legible when overlapping with content

--- a/src/components/Post/Post.module.scss
+++ b/src/components/Post/Post.module.scss
@@ -22,6 +22,8 @@
     line-height: $button-height;
     text-align: center;
     color: $color-base;
+    background: rgba($color-white, 0.9);
+    z-index: 1;
     border: 1px solid $color-gray-border;
     border-radius: $button-border-radius;
     font-size: $typographic-base-font-size;
